--- a/menu bar/home.html
+++ b/menu bar/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hamburger Menu</title>
+	<title>E-commerce</title>
 	<link rel="stylesheet" type="text/css" href="stylek.css">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script:700|Roboto&display=swap" rel="stylesheet">
